[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
cgmath = "0.18.0"
color-eyre = "0.6.2"
eyre = "0.6.12"
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.1"
winit = "0.29.10"
